fix: apply higher z-index to fix overlays

--- a/src/styles/antd-overrides/modal.scss
+++ b/src/styles/antd-overrides/modal.scss
@@ -29,7 +29,7 @@
 
 .ant-modal-wrap,
 .ant-modal-mask {
-  z-index: 1;
+  z-index: 20;
 }
 
 .ant-modal-footer {
